; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/extr_kernel_mach_header.c_getcommandfromheader.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/extr_kernel_mach_header.c_getcommandfromheader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.load_command = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getcommandfromheader(%struct.TYPE_3__* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.load_command*, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i64 1
  %10 = bitcast %struct.TYPE_3__* %9 to %struct.load_command*
  store %struct.load_command* %10, %struct.load_command** %6, align 8
  store i64 0, i64* %7, align 8
  br label %11

11:                                               ; preds = %34, %2
  %12 = load i64, i64* %7, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ult i64 %12, %15
  br i1 %16, label %17, label %37

17:                                               ; preds = %11
  %18 = load %struct.load_command*, %struct.load_command** %6, align 8
  %19 = getelementptr inbounds %struct.load_command, %struct.load_command* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* %5, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %26

23:                                               ; preds = %17
  %24 = load %struct.load_command*, %struct.load_command** %6, align 8
  %25 = bitcast %struct.load_command* %24 to i8*
  store i8* %25, i8** %3, align 8
  br label %38

26:                                               ; preds = %17
  %27 = load %struct.load_command*, %struct.load_command** %6, align 8
  %28 = ptrtoint %struct.load_command* %27 to i64
  %29 = load %struct.load_command*, %struct.load_command** %6, align 8
  %30 = getelementptr inbounds %struct.load_command, %struct.load_command* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = add i64 %28, %31
  %33 = inttoptr i64 %32 to %struct.load_command*
  store %struct.load_command* %33, %struct.load_command** %6, align 8
  br label %34

34:                                               ; preds = %26
  %35 = load i64, i64* %7, align 8
  %36 = add i64 %35, 1
  store i64 %36, i64* %7, align 8
  br label %11

37:                                               ; preds = %11
  store i8* null, i8** %3, align 8
  br label %38

38:                                               ; preds = %37, %23
  %39 = load i8*, i8** %3, align 8
  ret i8* %39
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
